Fix weird avatar alignment in header bar.
I noticed that the avatar in the header bar was overflowing the bar by a few
pixels in Chromium. Strangely, it underflowed in Firefox.

The solution seemed to be to set an explicit font-size for the text input and
then align the avatar to top instead of middle.

--- a/reviewboard/static/rb/css/common.less
+++ b/reviewboard/static/rb/css/common.less
@@ -430,6 +430,7 @@ form table td {
      padding: 2px;
      .border-radius(6px);
      background-color: #EEEEEE;
+     font-size: 1.2em;
    }
   }
 }
@@ -489,7 +490,7 @@ form table td {
 
     img {
       display: inline;
-      vertical-align: middle;
+      vertical-align: top;
       margin: 0;
       padding: 0;
     }
